--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-0"
     ]
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   }
